--- a/nyomtatas.html
+++ b/nyomtatas.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="hu">
 <head>
   <meta charset="utf-8"><meta>
   <title>Forrásoldal</title>
+  <meta>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="nyomtatas.css">
   <script src="js/bootstrap.min.js"></script>
+  <script src="nyomtatas.js"></script>
 </head>
 <body>
 
