--- a/nyomtatas.html
+++ b/nyomtatas.html
@@ -20,7 +20,7 @@
   <div class="row">
     <div class="col-md-12">
       <h3>Nyomtatási eljárások</h3>
-      <p>A nyomtatás dokumentumok sokszorosítására szolgáló eljárás. Kínában már a 8. században feltalálták, Európában viszont csak a reneszánsz korban jelent meg, a Johannes Gutenberg-féle nyomdaprés volt az első európai nyomdagép. Az évszázadok során sok eltérő nyomtatási eljárás fejlődött ki.</p>
+      <p>A nyomtatás dokumentumok sokszorosítására szolgáló eljárás. Kínában már a 8. században feltalálták, Európában viszont csak a reneszánsz korban jelent meg, a <a href="https://hu.wikipedia.org/wiki/Johannes_Gutenberg">Johannes Gutenberg</a>-féle nyomdaprés volt az első európai nyomdagép. Az évszázadok során sok eltérő nyomtatási eljárás fejlődött ki.</p>
     </div>
   </div>
   <div class="row">
@@ -30,18 +30,30 @@
     </div>
     <div class="col-md-4">
       <h3>Síknyomtatás</h3>
-      <p>1796-ban Alois Senefelder feltalálja a litográfiát, és ezzel együtt kidolgozta a síknyomtatás elvét. Először maratással kialakított rézlemezt használ magasnyomóformaként, majd olcsóbb anyagokat keres. Kísérletei közben mészkövet is használ, melynél véletlenül felfedezi, hogy a vizes felületen nem tapad meg a festék. Az ő nevéhez fűződik még a fémfelületről történő síknyomtatás bevezetése is.</p>
-      <p>Ugyanez az elv az alapja a bádognyomtatásnak is, melyet plakátgyártásnál, konzervdoboz gyártásnál használtak. Szintén ebből fejlődött ki a ma leginkább elterjedt ofszetnyomtatás, mely szintén egy közvetett nyomtatási forma.</p>
+      <p>1796-ban <a href=" https://hu.wikipedia.org/wiki/Alois_Senefelder">Alois Senefelder</a> feltalálja a litográfiát, és ezzel együtt kidolgozta a síknyomtatás elvét. Először maratással kialakított rézlemezt használ magasnyomóformaként, majd olcsóbb anyagokat keres. Kísérletei közben mészkövet is használ, melynél véletlenül felfedezi, hogy a vizes felületen nem tapad meg a festék. Az ő nevéhez fűződik még a fémfelületről történő síknyomtatás bevezetése is.</p>
+      <p>Ugyanez az elv az alapja a bádognyomtatásnak is, melyet plakátgyártásnál, konzervdoboz gyártásnál használtak. 
+        Szintén ebből fejlődött ki a ma leginkább elterjedt ofszetnyomtatás, mely szintén egy közvetett nyomtatási forma.</p>
     </div>
     <div class="col-md-4 bg-torzs">
       <h3>Szitanyomtatás</h3>        
-      <p>A 19. században újra felbukkan egy némileg feledésbe merült technológia, a szitanyomtatás. A textiliparban használják, ahol filmnyomásnak nevezték el. Főleg a lyoni selyemiparban volt használatos, selymek díszítésére. Kialakulásáról keveset tudunk, annyi azonban bizonyos, hogy Kínában és Japánban már évszázadokkal ezelőtt használták textilfestésre. A formát fakeretbe erősített emberi haj, később selyemszál alkotja, ráragasztott rizspapírból kivágott sablonnal. A módszer maga nem sokat változott, de ma már modernebb anyagokat és gyártástechnológiát alkalmaznak. A különböző sűrűségű szitaszövetekből sok esetben fototechnikai úton készítik a nyomóformát. Szitanyomtatással olyan anyagok állíthatók elő, amik mással csak nehezen, vagy egyáltalán nem. Manapság is a textilipar használja leginkább, de így gyártják például a közúti jelzőtáblákat is. Papírra is nyomnak vele, általában kis példányszámú névjegyek, plakátok gyártására ideális, de sok esetben használják ofszetnyomatok díszítő jellegű felülnyomására többnyire színtelen UV fényre száradó lakkokkal. Ezek mellett a művészetben is használatos grafikai eljárás. </p>      
+      <p>A 19. században újra felbukkan egy némileg feledésbe merült technológia, a szitanyomtatás. 
+        A textiliparban használják, ahol filmnyomásnak nevezték el. Főleg a lyoni selyemiparban volt használatos, selymek díszítésére. 
+        Kialakulásáról keveset tudunk, annyi azonban bizonyos, hogy Kínában és Japánban már évszázadokkal ezelőtt használták textilfestésre. 
+        A formát fakeretbe erősített emberi haj, később selyemszál alkotja, ráragasztott rizspapírból kivágott sablonnal.
+         A módszer maga nem sokat változott, de ma már modernebb anyagokat és gyártástechnológiát alkalmaznak. 
+         A különböző sűrűségű szitaszövetekből sok esetben fototechnikai úton készítik a nyomóformát. 
+         Szitanyomtatással olyan anyagok állíthatók elő, amik mással csak nehezen, vagy egyáltalán nem. 
+         Manapság is a textilipar használja leginkább, de így gyártják például a közúti jelzőtáblákat is.
+          Papírra is nyomnak vele, általában kis példányszámú névjegyek, plakátok gyártására ideális, de sok esetben használják ofszetnyomatok díszítő jellegű felülnyomására többnyire színtelen UV fényre száradó lakkokkal. 
+          Ezek mellett a művészetben is használatos grafikai eljárás. </p>      
     </div>
    </div>
    <div class="row">
     <div class="col-md-6">
       <h3>Mélynyomtatás</h3>        
-      <p>A 20. század elején tökéletesítik a mélynyomtatást, melynek elve az őskorig nyúlik vissza, majd később az ötvösművészek fejlesztették tovább. A 15. századig kézzel vésték a formákat. Majd savas maratással finomabb árnyalatok visszaadását is lehetővé tették. Ez az eljárás kimondottan művészeti célokra volt használatos. Klics Károly angliai útja során megismerkedik William Henry Fox Talbot találmányával, melynek lényege az, hogy bizonyos sók nagymolekulájú szerves anyagban fényérzékenyekké válnak. Emellett tanulmányozza az akkori modern textiliparban használt mélynyomó gépeket. Ezeket az ismereteket felhasználva kifejleszti a fényképészeti úton történő formakészítést, és a rácsmélynyomtatást. Lényegében az ő találmányát hívjuk ma hagyományos értelemben mélynyomtatásnak. Ezt az elvet alkalmazzák a tamponnyomtatásban is, mely hasonlóan az ofszetnyomtatáshoz, egy közvetett nyomtatási forma. Először egy rugalmas anyagra mélynyomtatással juttatják a festéket, aztán ezt az anyagot nyomják a nyomandó felületre. Az anyag rugalmassága lehetővé teszi, hogy nem csak sík felületnél használható. Manapság többek közt ajándék, és reklámtárgyak (például tollak, öngyújtók) esetében alkalmazzák. </p>
+      <p>A 20. század elején tökéletesítik a mélynyomtatást, melynek elve az őskorig nyúlik vissza, majd később az ötvösművészek fejlesztették tovább.
+         A 15. századig kézzel vésték a formákat. Majd savas maratással finomabb árnyalatok visszaadását is lehetővé tették
+         . Ez az eljárás kimondottan művészeti célokra volt használatos. Klics Károly angliai útja során megismerkedik <a href="https://hu.wikipedia.org/wiki/William_Henry_Fox_Talbot">William Henry Fox Talbot</a> találmányával, melynek lényege az, hogy bizonyos sók nagymolekulájú szerves anyagban fényérzékenyekké válnak. Emellett tanulmányozza az akkori modern textiliparban használt mélynyomó gépeket. Ezeket az ismereteket felhasználva kifejleszti a fényképészeti úton történő formakészítést, és a rácsmélynyomtatást. Lényegében az ő találmányát hívjuk ma hagyományos értelemben mélynyomtatásnak. Ezt az elvet alkalmazzák a tamponnyomtatásban is, mely hasonlóan az ofszetnyomtatáshoz, egy közvetett nyomtatási forma. Először egy rugalmas anyagra mélynyomtatással juttatják a festéket, aztán ezt az anyagot nyomják a nyomandó felületre. Az anyag rugalmassága lehetővé teszi, hogy nem csak sík felületnél használható. Manapság többek közt ajándék, és reklámtárgyak (például tollak, öngyújtók) esetében alkalmazzák. </p>
     </div>
     <div class="col-md-6 bg-torzs">
       <h3>Digitális eljárások</h3>        
