--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         A ma ismert legrégebbi bizonyíték egy 868-ban készült Gyémánt szútra, de a források alapján már 812-től papírpénzt is előállítottak, amelyhez nélkülözhetetlen a nyomtatás. 
         A magasnyomtatás kezdetleges formáját, a fadúcos nyomtatást alkalmazták, amely abból állt, hogy egy kézzel vésett falapot befestékeztek, majd egy papírlapot ráterítettek, és száraz kefével a hátoldalát dörzsölve hozzásimították. 
         Ugyanekkor már megpróbálkoztak fából faragott, szedhető írásjegyekkel is, jó néhány nyomtatott könyvet készítettek, de az eljárás nem terjedt el széles körben. 
-        <img src="kezi_szedes.jpg" alt="" title="Kézi szedés"></p> 
+        <img class="img-thumbnail" src="kezi_szedes.jpg" alt="" title="Kézi szedés"></p> 
     </div>
     <div class="col-md-4">
       <h3>Síknyomtatás</h3>
       <p>1796-ban <a href=" https://hu.wikipedia.org/wiki/Alois_Senefelder">Alois Senefelder</a> feltalálja a litográfiát, és ezzel együtt kidolgozta a síknyomtatás elvét. Először maratással kialakított rézlemezt használ magasnyomóformaként, majd olcsóbb anyagokat keres. Kísérletei közben mészkövet is használ, melynél véletlenül felfedezi, hogy a vizes felületen nem tapad meg a festék. Az ő nevéhez fűződik még a fémfelületről történő síknyomtatás bevezetése is.</p>
       <p>Ugyanez az elv az alapja a bádognyomtatásnak is, melyet plakátgyártásnál, konzervdoboz gyártásnál használtak. 
         Szintén ebből fejlődött ki a ma leginkább elterjedt ofszetnyomtatás, mely szintén egy közvetett nyomtatási forma.
-        <img src="ofszet_nyomogep.jpg" alt="" title="Ofszet nyomogep"> </p>
+        <img class="img-thumbnail" src="ofszet_nyomogep.jpg" alt="" title="Ofszet nyomogep" > </p>
     </div>
     <div class="col-md-4 bg-torzs">
       <h3>Szitanyomtatás</h3>        
@@ -67,7 +67,7 @@
          A személyi számítógépekhez használt nyomtatók ugyan már régóta digitális eljárásokkal működnek, de nyomdászati célokra kevés területen használják. 
          A hagyományosan nyomóformáról történő nyomtatással szemben eléggé lassúnak mondható.
           Eleinte kisebb példányszámú, kevésbé igényes termékeket gyártottak vele, de napjainkban akár 4-500 példányszámú nyomatok gazdaságos, jó minőségű nyomtatására is van lehetőség. 
-        <img src="nyomdagep_pultja.jpg" alt="" title="Nyomdagép pultja" ></p>
+        <img class="img-thumbnail" src="nyomdagep_pultja.jpg" alt="" title="Nyomdagép pultja" ></p>
     </div>
     
 <div>
