--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
 <div>
   <p>Plakátnyomtatás</p>
 
-  <p>Egy színes plakát nyomtatásának költségét meghatározó tényezők többek közt a papírlap minősége és a papírlap mérete</p>
+  <p>Egy színes plakát nyomtatásának költségét meghatározó tényezők többek közt a 
+    <li>papírlap minősége</li>
+    <li>papírlap mérete</li></p>
   
   <p>A következő űrlapon plakátnyomtatáshoz lehet árat kalkulálni:</p>
   
@@ -91,8 +93,8 @@
       <option value="45">Szatén, normál, fotópapír (190g/m³)</option>
       <option value="65">Művész, kreatív, kartonpapír (300g/m³)</option>
     </select>
-    <input type="button" value="Kalkuláció" id="kalkulalGomb" />
-    <div>
+    <input type="button" value="Kalkuláció" id="kalkulalGomb"  />
+    <div id="valasz">
       <p>A kalkuláció alapja:</p>
       <ul>
         <li>területe: <span id="terulet"></span> dm<sup>2</sup></li>
